--- a/index.html
+++ b/index.html
@@ -2,17 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="keywords" content="Travel, News, Destinations, Information, Wanderlust">
+	<meta name="description" content="Bits of information for travel lovers">
 	<title>Traveler's diary</title>
 	<link rel="stylesheet" href="http://normalize-css.googlecode.com/svn/trunk/normalize.css" />
-	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 	<link rel="stylesheet" href="slick/slick.css"/>
 	<link rel="stylesheet" href="slick/slick-theme.css"/>
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="tablet.css">
-	<link rel="stylesheet" href="mobile.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -31,15 +28,12 @@
 	<h1>Traveler's diary</h1>
 </div>
 
-<div class="cover">
-</div>
-
-
+<div class="cover"></div>
 <div class="line">
 	<h2>Featured Destinations</h2>
 </div>
 
-<a id="arrow" href=""><img src="images/arrow.png" height="50px" ></a>
+<a id="arrow" href=""><img src="images/arrow.png" height="50px"></a>
 
 <div id="contentBox">
 	<h3 class="blurb"></h3>
@@ -48,8 +42,8 @@
 <div>
 	<ul>
 		<div class="row">
-			<li class="titles col-xs-6 col-sm-6 col-md-3" >Curaçao</li>
-			<li class="titles col-xs-6 col-sm-6 col-md-3" >Sweden</li>
+			<li class="titles col-xs-6 col-sm-6 col-md-3">Curaçao</li>
+			<li class="titles col-xs-6 col-sm-6 col-md-3">Sweden</li>
 			<li class="titles hideForTablet col-md-3">Malaysia</li>
 			<li class="titles hideForTablet col-md-3">St. Lucia</li>
 		</div>
@@ -60,12 +54,11 @@
 	<h1 class="mobileTitles col-xs-12">Curaçao</h1>
 	<img id="pic1" class="col-xs-12 col-md-3" 
 		 data-description="Curaçao:<br>Home to more than 35 captivating beaches, a diverse heritage spanning 55 different cultures, 'live and let live' attitude and unrivaled European architecture; Curaçao remains one of the most exceptional islands of the region. Its capital city, Willemstad — a UNESCO World Heritage site — with its iconic colorful Handelskade backdrop and roster of museums, monuments, flavorful restaurants and shopping, was selected in 2013 as one of the Top 5 Cities in the Caribbean by Condé Nast Traveler's readers.  Curaçao's natural beauty, pristine diving and snorkeling sites are a favorite with divers and adventure seekers, and its beaches and idyllic weather, situated on the outer fringes of the Hurricane Belt, has won it further accolade and recognition."
-		src="images/curacao.jpg" />
+		src="images/curacao.jpg"/>
 	<h1 class="mobileTitles col-xs-12">Sweden</h1>
 	<img id="pic2" class= "col-xs-12 col-md-3" 
 		data-description="Sweden:<br>In some ways, visiting Sweden feels like walking right into a fashion or home-decor magazine. There are no boring outfits on the streets of Stockholm, and the care with which houses, cottages, cafes and public spaces are decorated and kept up throughout the country is truly inspiring. But Swedish style is never too showy; form and function are tightly linked in this society known for valuing moderation, practicality, order, simple lines and clever designs. Whether you decide to shop for your own versions or just enjoy the scenery, it’s hard not to fall for the cool aesthetics of this place."
-		src="images/sweden.png" /> 
-
+		src="images/sweden.png"/> 
 	<div id="hideForDesktop">
 		<div class="row">
 			<ul>
@@ -74,7 +67,6 @@
 			</ul>
 		</div>
 	</div>
-
 	<h1 class="mobileTitles col-xs-12">Malaysia</h1>
 	<img id="pic3" class="col-xs-12 col-md-3"
 		data-description="Malaysia:<br>To know Malaysia is to love Malaysia - a bubbling, bustling melting-pot of races and religions where Malays, Indians, Chinese and many other ethnic groups live together in peace and harmony. Our multiculturalism has made Malaysia a gastronomical paradise and home to hundreds of colourful festivals. It's no wonder that we love celebrating and socialising. As a people, Malaysians are very relaxed, warm and friendly. 
@@ -87,7 +79,7 @@
 	<img id="pic4" class="col-xs-12 col-md-3" 
 		data-description="St. Lucia:<br>Where can you wake up to a symphony of birds and drive through a volcano? Only on St. Lucia island! St. Lucia stands apart from the rest of the Caribbean islands thanks to its varied landscape and diverse culture and cuisine, which is distinguished by African, Indian, Caribbean, British, Spanish and French influences. You can explore everything from the Piton Mountains and rainforest to the Sulphur Springs of Soufriere and the Caribbean coral reef on this 238 square-mile island in paradise. There are so many reasons to choose St. Lucia island!
 		 The active traveler can snorkel in the refreshing Caribbean Sea, hike to the top of the Gros Piton or Petite Piton peaks, or take advantage of a wide range of water sports available at their St. Lucia Resort. The foodie can indulge in fresh local flavors by stopping at roadside stands or dining at five-star restaurants. Romantic couples can relax on the white sand of a pristine beach or in a mud bath before going on a one-of-a-kind date at one of St. Lucia’s music or cultural festivals.  Whatever your preference, your St. Lucia island vacation will be nothing but smooth sailing!"
-		src="images/lucia.jpg" />
+		src="images/lucia.jpg"/>
 </div>
 
 <div class="line2 col-md-12">
@@ -136,8 +128,7 @@
 		</form>
 	</div>
 <br>
-
-<div id="social">
+	<div id="social">
 	<div class="icons">
 		<a href="http://www.facebook.com" target="_blank"><img src="Icons/facebook.png"></a>
 	</div>
@@ -150,11 +141,11 @@
 	<div class="icons">
 		<a href="http://www.Pinterest.com" target="_blank"><img src="Icons/pinterest.png"></a>
 	</div>
-	<h6>&copy; Zalini 2015</h6>
+	<h6>&copy; Zalini</h6>
+	</div>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <script src="http://cdn.jsdelivr.net/velocity/1.2.3/velocity.min.js"></script>
 <script type="text/javascript" src="slick/slick.min.js"></script>
