--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 	<div id="thankYou">
 		<button id="exitBtn">X</button>
 		<h1></h1>
-		<img src="icons/tree.png" width="70px" height="70px"/>
-		<img src="icons/plane.png" width="70px" height="70px"/>
-		<img src="icons/tower.png" width="70px" height="70px"/>
+		<img src="icons/tree.png"/>
+		<img src="icons/plane.png"/>
+		<img src="icons/tower.png"/>
 	</div>
 </div>
 
@@ -116,10 +116,14 @@
 		<h5>Join our mailing list for the best in travel ideas and resources!</h5>
 		<form>
 		<tr>
+		<div class="emailInput">
 			<td>Name:</td>
 			<td><input type="text" id="contactName"></td>
+		</div>
+		<div class="emailInput">
 			<td>Email:</td>
 			<td><input type="email" id="emailInfo"></td>
+		</div>
 		</tr>
 		<tr>
 			<td><input type="submit" value="Submit" id="submitBtn"/></td>
@@ -147,7 +151,6 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<script src="http://cdn.jsdelivr.net/velocity/1.2.3/velocity.min.js"></script>
 <script type="text/javascript" src="slick/slick.min.js"></script>
 <script type="text/javascript" src="scripts.js"></script>
 </body>
