--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="keywords" content="Travel, News, Destinations, Information, Wanderlust">
 	<meta name="description" content="Bits of information for travel lovers">
 	<title>Traveler's diary</title>
-	<link rel="stylesheet" href="http://normalize-css.googlecode.com/svn/trunk/normalize.css" />
+	<link rel="stylesheet" href="http://normalize-css.googlecode.com/svn/trunk/normalize.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link rel="stylesheet" href="slick/slick.css"/>
 	<link rel="stylesheet" href="slick/slick-theme.css"/>
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+<div class="container">
 <div id="emailConfirmBox">
 	<div id="thankYou">
 		<button id="exitBtn">X</button>
@@ -147,6 +148,7 @@
 	</div>
 	<h6>&copy; Zalini</h6>
 	</div>
+</div>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
