--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 	<div id="thankYou">
 		<button id="exitBtn">X</button>
 		<h1></h1>
-		<img src="icons/tree.png"/>
-		<img src="icons/plane.png"/>
-		<img src="icons/tower.png"/>
+		<img src="images/tree.png"/>
+		<img src="images/plane.png"/>
+		<img src="images/tower.png"/>
 	</div>
 </div>
 
