--- a/index.html
+++ b/index.html
@@ -15,16 +15,6 @@
 
 <body>
 <div class="container">
-<div id="emailConfirmBox">
-	<div id="thankYou">
-		<button id="exitBtn">X</button>
-		<h1></h1>
-		<img src="images/tree.png"/>
-		<img src="images/plane.png"/>
-		<img src="images/tower.png"/>
-	</div>
-</div>
-
 <div id="title">
 	<h1>Traveler's diary</h1>
 </div>
@@ -135,22 +125,32 @@
 <br>
 	<div id="social">
 	<div class="icons">
-		<a href="http://www.facebook.com" target="_blank"><img src="Icons/facebook.png"></a>
+		<a href="http://www.facebook.com" target="_blank"><img src="icons/facebook.png"></a>
 	</div>
 	<div class="icons">
-		<a href="http://www.twitter.com" target="_blank"><img src="Icons/twitter.png"></a>
+		<a href="http://www.twitter.com" target="_blank"><img src="icons/twitter.png"></a>
 	</div>
 	<div class="icons">
-		<a href="http://www.instagram.com" target="_blank"><img src="Icons/Instagram.png"></a>
+		<a href="http://www.instagram.com" target="_blank"><img src="icons/Instagram.png"></a>
 	</div>
 	<div class="icons">
-		<a href="http://www.Pinterest.com" target="_blank"><img src="Icons/pinterest.png"></a>
+		<a href="http://www.Pinterest.com" target="_blank"><img src="icons/pinterest.png"></a>
 	</div>
 	<h6>&copy; Zalini</h6>
 	</div>
 </div>
-</div>
 
+
+<div id="emailConfirmBox">
+	<div id="thankYou">
+		<button id="exitBtn">X</button>
+		<h1></h1>
+		<img src="images/tree.png"/>
+		<img src="images/plane.png"/>
+		<img src="images/tower.png"/>
+	</div>
+</div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <script type="text/javascript" src="slick/slick.min.js"></script>
