removed line and moved icons

--- a/index.html
+++ b/index.html
@@ -124,21 +124,20 @@
 <br>
 	<div id="social">
 	<div class="icons">
-		<a href="http://www.facebook.com" target="_blank"><img src="icons/facebook.png"></a>
+		<a href="http://www.facebook.com" target="_blank"><img src="images/facebook.png"></a>
 	</div>
 	<div class="icons">
-		<a href="http://www.twitter.com" target="_blank"><img src="icons/twitter.png"></a>
+		<a href="http://www.twitter.com" target="_blank"><img src="images/twitter.png"></a>
 	</div>
 	<div class="icons">
-		<a href="http://www.instagram.com" target="_blank"><img src="icons/Instagram.png"></a>
+		<a href="http://www.instagram.com" target="_blank"><img src="images/Instagram.png"></a>
 	</div>
 	<div class="icons">
-		<a href="http://www.Pinterest.com" target="_blank"><img src="icons/pinterest.png"></a>
+		<a href="http://www.Pinterest.com" target="_blank"><img src="images/pinterest.png"></a>
 	</div>
 	<h6>&copy; Zalini</h6>
 	</div>
 </div>
-
 
 <div id="emailConfirmBox">
 	<div id="thankYou">
