changes to the blurbs

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 	<h2>Featured Destinations</h2>
 </div>
 
-<a id="arrow" href=""><img src="images/arrow.png" height="50px"></a>
+
 
 <div id="contentBox">
+	<img id ="arrow"src="images/arrow.png" height="50px">
 	<h3 class="blurb"></h3>
 </div>
 
